tests/specs/check/css_import/not_exists.out
error: Module not found "file:///[WILDLINE]/not_exists.css".
    at file:///[WILDLINE]/not_exists.ts:1:8
